err.txt
In file included from lexer.c:3:
lexer.c: In function ‘tokenize’:
lexer.c:198:9: error: expected identifier or ‘(’ before ‘_Bool’
  198 |         bool reservedCharFlag = false;
      |         ^~~~
lexer.c:200:14: error: ‘reservedCharFlag’ undeclared (first use in this function)
  200 |          || (reservedCharFlag = isReservedChar(c))) {
      |              ^~~~~~~~~~~~~~~~
lexer.c:200:14: note: each undeclared identifier is reported only once for each function it appears in
parser.c: In function ‘dumpNodeHelper’:
parser.c:18:31: warning: initialization of ‘Token *’ {aka ‘struct Token *’} from incompatible pointer type ‘Node *’ {aka ‘struct Node *’} [-Wincompatible-pointer-types]
   18 |             for (Token *cur = node->next; cur != NULL; cur = cur->next) {
      |                               ^~~~
parser.c:19:40: warning: passing argument 2 of ‘dumpNodeHelper’ from incompatible pointer type [-Wincompatible-pointer-types]
   19 |                 dumpNodeHelper(stream, cur, depth + 1);
      |                                        ^~~
      |                                        |
      |                                        Token * {aka struct Token *}
parser.c:10:48: note: expected ‘Node *’ {aka ‘struct Node *’} but argument is of type ‘Token *’ {aka ‘struct Token *’}
   10 | static void dumpNodeHelper(FILE *stream, Node *node, int depth)
      |                                          ~~~~~~^~~~
parser.c:29:40: error: ‘Node’ {aka ‘struct Node’} has no member named ‘car’
   29 |             dumpNodeHelper(stream, node->car, depth + 1);
      |                                        ^~
parser.c:30:40: error: ‘Node’ {aka ‘struct Node’} has no member named ‘cdr’
   30 |             dumpNodeHelper(stream, node->cdr, depth + 1);
      |                                        ^~
parser.c: At top level:
parser.c:71:8: error: unknown type name ‘bool’
   71 | static bool consumeToken(TokenType type)
      |        ^~~~
parser.c: In function ‘consumeToken’:
parser.c:75:16: error: ‘true’ undeclared (first use in this function)
   75 |         return true;
      |                ^~~~
parser.c:75:16: note: each undeclared identifier is reported only once for each function it appears in
parser.c:77:12: error: ‘false’ undeclared (first use in this function)
   77 |     return false;
      |            ^~~~~
parser.c: At top level:
parser.c:85:8: error: unknown type name ‘bool’
   85 | static bool atEOF()
      |        ^~~~
parser.c: In function ‘parsePairHelper’:
parser.c:97:9: error: ‘Node’ {aka ‘struct Node’} has no member named ‘car’
   97 |     pair->car = parseRecursive();
      |         ^~
parser.c:97:17: warning: implicit declaration of function ‘parseRecursive’ [-Wimplicit-function-declaration]
   97 |     pair->car = parseRecursive();
      |                 ^~~~~~~~~~~~~~
parser.c:98:9: error: ‘Node’ {aka ‘struct Node’} has no member named ‘cdr’
   98 |     pair->cdr = parsePairHelper();
      |         ^~
parser.c: In function ‘parsePrimitive’:
parser.c:110:18: warning: implicit declaration of function ‘createToken’; did you mean ‘createNode’? [-Wimplicit-function-declaration]
  110 |     Node *node = createToken(ND_PRIMITIVE);
      |                  ^~~~~~~~~~~
      |                  createNode
parser.c:110:18: warning: initialization of ‘Node *’ {aka ‘struct Node *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
parser.c: At top level:
parser.c:115:14: error: conflicting types for ‘parseRecursive’
  115 | static Node *parseRecursive()
      |              ^~~~~~~~~~~~~~
parser.c:97:17: note: previous implicit declaration of ‘parseRecursive’ was here
   97 |     pair->car = parseRecursive();
      |                 ^~~~~~~~~~~~~~
parser.c: In function ‘parse’:
parser.c:141:9: error: ‘cur’ undeclared (first use in this function)
  141 |         cur->next = parsePair();
      |         ^~~
parser.c:139:11: warning: unused variable ‘curNode’ [-Wunused-variable]
  139 |     Node *curNode = &headNode;
      |           ^~~~~~~
parser.c: In function ‘consumeToken’:
parser.c:78:1: warning: control reaches end of non-void function [-Wreturn-type]
   78 | }
      | ^
At top level:
parser.c:115:14: warning: ‘parseRecursive’ defined but not used [-Wunused-function]
  115 | static Node *parseRecursive()
      |              ^~~~~~~~~~~~~~
make: *** [Makefile:16: lexer.o] Error 1
